merubah sedikit syntax bg img css

--- a/Style.css
+++ b/Style.css
@@ -91,7 +91,7 @@ section {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url("../Img/kopi1.jpg");
+  background-image: url("Img/kopi1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
